# models/post.go
@@ -10,6 +10,7 @@ type Post struct {
 	ArticleTitle       string `gorm:"size:255;not null;" json:"article_title"`
 	ArticleDescription string `gorm:"text;" json:"article_description"`
 	CategoryID         uint   `json:"category_id"`
+	ArticleContent     string `gorm:"text;" json:"article_content"`
 	PostLikeCount      uint   `json:"post_like_count" gorm:"not null;default:0"`
 	PostDislikeCount   uint   `json:"post_dislike_count" gorm:"not null;default:0"`
 
